# smb3-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  New Thread  README.md  Super Mario Bros 3 (E) Toad.cht  palette_pools_preview.html  palette_variants_preview.html  shell.nix
.claude/: settings.json
.claude/commands/: king-quote.md  level.md  review-patch.md  test-level.md  tile.md  wch.md
.github/workflows/: ci.yml  deploy.yml
docs/: application_flow.md  overworld_shuffle_logic.md  palette_randomizer_design.md  pipe_swap_poc_findings.md  smb3_rom_reference.md  start_airship_swap_findings.md  vision.md  wild_injection_rework.md
src/: ips.rs  lib.rs  main.rs  randomizer.rs  rom.rs  wasm.rs
src/randomize/: anchor_visuals.rs  antechambers.rs  autoscroll.rs  beta_tornado.rs  credits.rs  (+39 more)
tests/: chr_stats.rs  toad_swap.rs
tools/: add_variant_family.py  apply_ips_subset.py  attribute_diffs.py  canary_chr.py  check_hb_writes.py  check_powerups_walker.py  check_scroll.py  credits_render.py  diff_hb_layouts.py  extract_palette_variants.py  extract_recolored_pools.py  find_1_3.py  fx_check.py  gen_palette_probes.py  gen_palette_rainbow.py  gen_palette_variants.py  gen_test_roms.py  gen_tileset_sampler.py  level_sim.py  map_viz.py  map_walker.py  offset_dups.py  palette_inspect.py  parse_ips.py  pipe_shuffle.py  poc_start_airship_swap.py  preview_palette_pools.py  preview_palette_variants.py  required_progression.py  rom_map.py  validate_shuffleable.py
web/: app.js  chr-viewer.html  chr.js  index.html  options.js  sprite-picker.html  sprites.js  style.css
(+69 files in other folders)
