[package]
name = "smb3r"
version = "0.1.0"
edition = "2024"

[lib]
name = "smb3r"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "smb3r"
path = "src/main.rs"

[dependencies]
rand = "0.9"
rand_chacha = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
